# elixir-cold-recommendation

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .env.example  .formatter.exs  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  README.md  mix.exs  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
bench/: recgpt_serve_bench.exs
c_src/: Makefile  recgpt_nvtx.c
config/: config.exs  dev.exs  prod.exs  test.exs
docs/: 00_recgpt_library.md  01_grpc_api.md  01_python_recgpt_parity_progress.md  02_pipeline_overview.md  02_pipeline_reference.md  02_recgpt_checkpoint_layout.md  03_etnf_database_design.md  03_pipeline_steps.md  03_recgpt_library.md  04_eval_data_shapes.md  04_foss_datasets_etnf_dublin_core_xmp.md  04_recgpt_library.md  05_eval_data_shapes.md  05_evaluation_and_testing.md  06_eval_data_shapes.md  06_evaluation_and_testing.md  07_recgpt_checkpoint_layout.md  07_steam_splits_and_pretraining.md  08_latency_and_performance.md  08_pipeline_reference.md  08_python_recgpt_parity_progress.md  08_recgpt_checkpoint_layout.md  09_parity_overview.md  09_recgpt_paradigm.md  09_rest_api.md  10_architecture_introduction.md  10_parity_layers.md  11_infrastructure_serving.md  11_recgpt_paradigm.md  12_dynamic_state_ets.md  13_grpc_api.md  13_grpc_rest_api.md  13_infrastructure_serving.md  13_layers_and_testing.md  14_api_schemas.md  14_architecture_references.md  15_infrastructure_serving.md  15_layers_overview.md  16_architecture_conclusion.md  16_layer_artifacts.md  (+75 more)
formal/: README.md  RecGptCodec.lean  lakefile.lean  (+1 more)
(+325 files in other folders)
